localize new texts

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -57,17 +57,17 @@
             <TextField row="13" column="1" [text]="voiceSummaryTimeIntervalMin" keyboardType="number" returnKeyType="done" (returnPress)="onVoiceSummaryTimeIntervalMinReturnPress($event)" (blur)="onVoiceSummaryTimeIntervalMinReturnPress($event)">
             </TextField>
 
-            <Label row="14" column="0" colSpan="2" text="{{'AWS_BACKUP_RESTORE_ENDPOINT_PREFIX'|L}}" class="label"></Label>
+            <Label row="14" column="0" colSpan="2" text="{{'AWS Backup Restore Endpoint Prefix'|L}}" class="label"></Label>
             
             <TextField row="15" column="0" colSpan="2" [text]="AWS_BACKUP_RESTORE_ENDPOINT_PREFIX" returnKeyType="done" (returnPress)="onAWS_BACKUP_RESTORE_ENDPOINT_PREFIXReturnPress($event)" (blur)="onAWS_BACKUP_RESTORE_ENDPOINT_PREFIXReturnPress($event)">
             </TextField>
 
-            <Label row="16" column="0" colSpan="2" text="{{'AWS_BACKUP_RESTORE_API_KEY'|L}}" class="label"></Label>
+            <Label row="16" column="0" colSpan="2" text="{{'AWS Backup Restore Endpoint API KEY'|L}}" class="label"></Label>
             
             <TextField row="17" column="0" colSpan="2" [text]="AWS_BACKUP_RESTORE_API_KEY" returnKeyType="done" (returnPress)="onAWS_BACKUP_RESTORE_API_KEYReturnPress($event)" (blur)="onAWS_BACKUP_RESTORE_API_KEYReturnPress($event)">
             </TextField>
 
-            <Label row="18" column="0" colSpan="2" text="{{'AWS_BACKUP_RESTORE_REGION'|L}}" class="label"></Label>
+            <Label row="18" column="0" colSpan="2" text="{{'AWS Backup Restore Endpoint Region'|L}}" class="label"></Label>
             
             <TextField row="19" column="0" colSpan="2" [text]="AWS_BACKUP_RESTORE_REGION" returnKeyType="done" (returnPress)="onAWS_BACKUP_RESTORE_REGIONReturnPress($event)" (blur)="onAWS_BACKUP_RESTORE_REGIONReturnPress($event)">
             </TextField>
