fix temperature and meteo layout

--- a/src/app/live/live.component.html
+++ b/src/app/live/live.component.html
@@ -37,7 +37,7 @@
             <GridLayout row="2" columns="*,*,*" rows="*,*">
                 <Label #durationLabel row="0" col="0" [text]="duration" textWrap="false" class="value orangeColor"></Label>
                 <Label row="1" col="0" text="{{'DURATION'|L}}" textWrap=false class="label  orangeColor"></Label>
-                <StackLayout row="0" col="1" orientation="horizontal" horizontalAlignment="center">
+                <StackLayout row="0" col="1" orientation="vertical" horizontalAlignment="center">
                     <Label [text]="weatherIcon" class="fas weather-value orangeColor"></Label>
                     <Label [text]="temperature" class="fas temperature-value orangeColor"></Label>
                 </StackLayout>
