--- a/src/app/settings/cadence/cadence.component.html
+++ b/src/app/settings/cadence/cadence.component.html
@@ -3,12 +3,17 @@
     <Label text="{{'CADENCE DEVICE'|L}}"></Label>
 </ActionBar>
 
-<GridLayout rows="50,70,50,*" columns="*">
+<GridLayout rows="40,60,40,40,*" columns="*">
     <Button row="0" text="{{'SCAN'|L}}" [nsRouterLink]="['../cadence/scanner']" (tap)="startScanning()"></Button>
     <Label row="1" [text]="peripheral" textWrap="true" class="label"></Label>
     <Button row="2" text="{{'DISCONNECT'|L}}" (tap)="disconnect()" [visibility]="visibleIfConnected()"></Button>
-    <GridLayout row="3" columns="*" rows="*,80" [visibility]="visibleIfConnected()">
+    <Button row="3" text="{{'RESTART'|L}}" (tap)="restart()" [visibility]="visibleIfConnected()"></Button>
+    <GridLayout row="4" columns="*" rows="*,80,80,80,80,80" [visibility]="visibleIfConnected()">
         <Label row="0" col="0" [text]="rpm" textWrap="false" class="value cyanColor"></Label>
-        <Label row="1" col="1" text="{{'CADENCE RPM'|L}}" textWrap=false class="label cyanColor"></Label>
+        <Label row="1" col="0" text="{{'CADENCE RPM'|L}}" textWrap=false class="label cyanColor"></Label>
+        <Label row="2" col="0" [text]="cadenceCounter" textWrap="false" class="value cyanColor"></Label>
+        <Label row="3" col="0" text="{{'CADENCE COUNTER RPM'|L}}" textWrap=false class="label cyanColor"></Label>
+        <Label row="4" col="0" [text]="status" textWrap="false" class="value cyanColor"></Label>
+        <Label row="5" col="0" text="{{'DEVICE STATUS'|L}}" textWrap=false class="label cyanColor"></Label>
     </GridLayout>
 </GridLayout>
