--- a/src/app/live/live.component.scss
+++ b/src/app/live/live.component.scss
@@ -7,14 +7,17 @@
 .weather-value {
     font-size: 45px;
     text-align: center;
-    vertical-align: bottom;
 }
 
 .temperature-value {
-    font-size: 25px;
-    text-align: center;
-    vertical-align: bottom;
+    font-size: 30px;
 }
+
+
+.humidity-value {
+    font-size: 30px;
+}
+
 
 .label {
     text-align: center;
