--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -46,7 +46,7 @@
 
     <AbsoluteLayout class="remove-dialog-wrapper">
         <StackLayout class="dialog">
-            <Label textWrap="true" text="{{'Are You Sure to Remove Selected Tracks?'|L}}"></Label>
+            <Label textWrap="true" textAlignment="center" text="{{'Are You Sure to Remove Selected Tracks?'|L}}"></Label>
             <Button class="btn btn-primary" text="{{'YES: Remove Selected Tracks'|L}}" (tap)="removeTracks(true)"></Button>
             <Button class="btn btn-danger" text="{{'NO: Don\'t Remove Selected Tracks'|L}}" (tap)="removeTracks(false)"></Button>
             <Button class="btn" text="{{'CANCEL'|L}}" (tap)="closeRemoveDialogOpen()"></Button>
